--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 	<style>
     body
     {
-        background-image: url('../static/images/rv.png');
+        background-image: url('/../static/images/rv.png');
         background-repeat: no-repeat;
 
         background-size: 40%;
