--- a/templates/result.html
+++ b/templates/result.html
@@ -18,7 +18,7 @@
 	<style>
     body
     {
-        background-image: url('/static/images/rv.png');
+        background-image: url("rv.png");
         background-repeat: no-repeat;
 
         background-size: 40%;
