--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
 	<style>
     body
     {
-        background-image: url('rv.png');
+        background-image: url("rv.png");
         background-repeat: no-repeat;
 
         background-size: 40%;
         background-position: center;
-        background-opacity: 0.2
+        background-opacity: 1
     }
     </style>
     <!--background-attachment: fixed;-->
