--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <style>
     body
     {
-        background-image: url("rv.png");
+        background-image: url("https://careerworldedu.org/storage/files/in/839/thumb-816x460-543514145000c392f80d6a38f2207060.jpg");
         background-repeat: no-repeat;
 
         background-size: 40%;
